<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iconUK"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/icon_UK"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/wielkabrytania" />

    <Button
        android:id="@+id/randomChapterButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/itemSizeWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/random_chapter"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/addChapterButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/itemSizeWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/add_chapter"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/showCompleteChapterButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/itemSizeWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/show_complete_chapters"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/showNotCompleteChapterButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/itemSizeWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/show_not_complete_chapters"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/itemSizeWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/progressshape">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/chapters_complete"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:progress="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            android:progressTint="#ff0600"
            android:progressBackgroundTint="#FFFFFF"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="0%"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/progressBar4"
            app:layout_constraintStart_toStartOf="@+id/progressBar4"
            app:layout_constraintTop_toBottomOf="@+id/progressBar4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>